--- a/biblio.bib
+++ b/biblio.bib
@@ -105,3 +105,11 @@
   year={2014},
   publisher={Springer}
 }
+
+@book{lomolino2006biogeography,
+  title={Biogeography},
+  author={Lomolino, Mark V and Riddle, Brett R and Brown, James H and Brown, James H},
+  number={QH84 L65 2006},
+  year={2006},
+  publisher={Sinauer Associates Sunderland, MA}
+}
