--- a/biblio.bib
+++ b/biblio.bib
@@ -113,3 +113,40 @@
   year={2006},
   publisher={Sinauer Associates Sunderland, MA}
 }
+
+@article{franklin2019changing,
+  title={Changing ecological communities along an elevation gradient in seasonally dry tropical forest on Hispaniola (Sierra Mart{\'\i}n Garc{\'\i}a, Dominican Republic)},
+  author={Franklin, Janet and Majure, Lucas C and Encarnaci{\'o}n, Yuley and Clase, Teodoro and Almonte-Espinosa, Hodali and Landestoy, Miguel and Kratter, Andrew W and Oswald, Jessica A and Soltis, Douglas E and Terrill, Ryan S and others},
+  journal={Biotropica},
+  year={2019},
+  publisher={Wiley Online Library}
+}
+
+@article{martin2007tropical,
+  title={Tropical montane forest ecotones: climate gradients, natural disturbance, and vegetation zonation in the Cordillera Central, Dominican Republic},
+  author={Martin, Patrick H and Sherman, Ruth E and Fahey, Timothy J},
+  journal={Journal of Biogeography},
+  volume={34},
+  number={10},
+  pages={1792--1806},
+  year={2007},
+  publisher={Wiley Online Library}
+}
+
+@phdthesis{camara1997republica,
+  title={Rep{\'u}blica Dominicana: Din{\'a}mica del medio f{\'\i}sico en la regi{\'o}n Caribe (Geograf{\'\i}a F{\'\i}sica, sabanas y litoral). Aportaci{\'o}n al conocimiento de la tropicalidad insular},
+  author={C{\'a}mara, Rafael},
+  year={1997},
+  school={Tesis Doctoral (in{\'e}dita). Universidad de Sevilla}
+}
+
+@article{kennedy20064000,
+  title={A 4000-year record of fire and forest history from Valle de Bao, Cordillera Central, Dominican Republic},
+  author={Kennedy, Lisa M and Horn, Sally P and Orvis, Kenneth H},
+  journal={Palaeogeography, Palaeoclimatology, Palaeoecology},
+  volume={231},
+  number={3-4},
+  pages={279--290},
+  year={2006},
+  publisher={Elsevier}
+}
