Updated to 2020-02 edition, added some images

--- a/biblio.bib
+++ b/biblio.bib
@@ -150,3 +150,10 @@
   year={2006},
   publisher={Elsevier}
 }
+
+@article{camara2020tbrs,
+  title={TBRs, a methodology for the multi-scalar cartographic analysis of the distribution of plant formations},
+  author={C{\'a}mara Artigas, Rafael and D{\'\i}az del Olmo, Fernando and Mart{\'\i}nez Batlle, Jos{\'e} Ram{\'o}n},
+  year={2020},
+  publisher={Asociaci{\'o}n de la Geograf{\'\i}a Espa{\~n}ola}
+}
