--- a/biblio.bib
+++ b/biblio.bib
@@ -157,3 +157,32 @@
   year={2020},
   publisher={Asociaci{\'o}n de la Geograf{\'\i}a Espa{\~n}ola}
 }
+
+@article{olson1998global,
+  title={The Global 200: a representation approach to conserving the Earth's most biologically valuable ecoregions},
+  author={Olson, David M and Dinerstein, Eric},
+  journal={Conservation biology},
+  volume={12},
+  number={3},
+  pages={502--515},
+  year={1998},
+  publisher={JSTOR}
+}
+
+@article{olson2001terrestrial,
+  title={Terrestrial Ecoregions of the World: A New Map of Life on Earth: A new global map of terrestrial ecoregions provides an innovative tool for conserving biodiversity},
+  author={Olson, David M and Dinerstein, Eric and Wikramanayake, Eric D and Burgess, Neil D and Powell, George VN and Underwood, Emma C and D'amico, Jennifer A and Itoua, Illanga and Strand, Holly E and Morrison, John C and others},
+  journal={BioScience},
+  volume={51},
+  number={11},
+  pages={933--938},
+  year={2001},
+  publisher={American Institute of Biological Sciences}
+}
+
+@article{udvardybiogeographical,
+  title={A classification of the biogeographical provinces of the World},
+  author={Udvardy, Miklos DF},
+  year={2001},
+  publisher={International Union for Conservation of Nature and Natural Resources (IUCN)}
+}
